# geo-optimisation

./: .env.example  .gitignore  README.md  dev-crm.bat  dev-crm.ps1  docker-compose.yml  leads_menuisiers_annecy.json  pyproject.toml  start-deep-geo.bat  start-deep-geo.ps1
deep_geo_backend/: Procfile  README.md  pyproject.toml
deep_geo_backend/app/: __init__.py  activity_log.py  config.py  database.py  main.py  models.py  schemas.py  worker.py
deep_geo_backend/app/pipeline/: runner.py
deep_geo_backend/app/routers/: v2.py
deep_geo_backend/app/services/: deep_crawl.py  groq_rag_audit.py  places_google.py
deep_geo_backend/app/static/: essai.html
geo_crm/: README.md  dev.sh  run-api.cmd  run-api.sh
geo_crm/backend/: README.md  pyproject.toml
geo_crm/backend/app/: __init__.py  activity_log.py  config.py  database.py  main.py  models.py  persist.py  schemas.py
geo_crm/backend/app/routers/: jobs.py  leads.py
geo_crm/backend/app/services/: job_runner.py
geo_crm/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
geo_crm/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
geo_crm/frontend/src/components/: EmailTemplateModal.tsx  GeoPlaybook.tsx  HeroKpiCards.tsx  JsonCodeBlock.tsx  LeadPipelineTable.tsx  OpportunityDrawer.tsx  ScoreGauge.tsx  ZoneScannerBar.tsx
geo_crm/frontend/src/lib/: leadDisplay.ts
src/geo_stealth_prospector/: __init__.py  __main__.py  async_cancel.py  audit_groq.py  cli.py  config.py  crawl_proof.py  duck_search.py  exceptions.py  export_leads.py  filters.py  lead_dedupe.py  models.py  naming.py  pipeline.py  profession_categories.py  professions.py  tldx.py  zone_sourcing.py
