[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-stealth-prospector"
version = "0.1.0"
description = "CLI de génération de leads B2B et d'audits commerciaux GEO (Generative Engine Optimization)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "groq>=0.11.0",
    "tldextract>=5.1.0",
    "orjson>=3.9.0",
]

[project.scripts]
geo-stealth = "geo_stealth_prospector.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["geo_stealth_prospector"]
